# rnotify

backend/: Cargo.toml  test.json
backend/bot/: mod.rs
backend/src/: main.rs
backend/src/bot/: mod.rs
frontend/: bower.json
