[package]
name = "rnotify"
version = "0.1.0"
authors = ["Pavel Mukhanov <mukhanovpv@gmail.com>"]

[dependencies]
tokio = "0.1.5"
hyper = "0.11.25"
hyper-tls = "0.1.3"
env_logger = "0.5.7"
serde_json = "1.0.13"
serde_derive = "1.0.37"
serde = "1.0.37"
futures = "0.1.21"
tokio-core = "0.1.16"
telegram-bot = "0.6"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "bot"
path = "src/bot/mod.rs"
